[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pwm-agent-drug"
version = "0.1.0"
description = "Computational drug design: molecular docking, ADMET prediction, similarity search, lead optimization, and PWM registry benchmarking."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["pwm-agent-core>=1,<2"]

[project.scripts]
pwm-drug = "pwm_agent_drug.cli:main"

[project.entry-points."pwm_agent.specs"]
drug-design = "pwm_agent_drug:AGENT"

[tool.setuptools.packages.find]
where = ["src"]
